provisioning/ft_services/iptables_v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -p tcp -m multiport --dports ssh,imap,imaps,ldap,ldaps,time
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -p udp -m multiport --dports time
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d 127/8,10/8
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d gitlab.nxvms.dev -m comment --comment "gitlab.nxvms.dev"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d tools.vmsproxy.com -m comment --comment "tools.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d tools-eu.vmsproxy.com -m comment --comment "tools-eu.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d nxlicensed.test.hdw.mx -m comment --comment "nxlicensed.test.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d test.ft-cloud.hdw.mx -m comment --comment "test.ft-cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.test.ft-cloud.hdw.mx -m comment --comment "relay.test.ft-cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d updates.networkoptix.com -m comment --comment "updates.networkoptix.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d eu-central-1.mediator.test.ft-cloud.hdw.mx -m comment --comment "eu-central-1.mediator.test.ft-cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d registry-1.docker.io -m comment --comment "registry-1.docker.io"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d stage.nxvms.com -m comment --comment "stage.nxvms.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.vmsproxy.com -m comment --comment "relay.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.stage.nxvms.com -m comment --comment "relay.stage.nxvms.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d ap-southeast-1.mediator.vmsproxy.com -m comment --comment "ap-southeast-1.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d ap-southeast-2.mediator.vmsproxy.com -m comment --comment "ap-southeast-2.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d eu-central-1.mediator.vmsproxy.com -m comment --comment "eu-central-1.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d me-south-1.mediator.vmsproxy.com -m comment --comment "me-south-1.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-east-1.mediator.vmsproxy.com -m comment --comment "us-east-1.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-east-2.mediator.vmsproxy.com -m comment --comment "us-east-2.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-west-1.mediator.vmsproxy.com -m comment --comment "us-west-1.mediator.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-west-1.mediator.vmsproxy.hdw.mx -m comment --comment "us-west-1.mediator.vmsproxy.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-east-1.mediator.vmsproxy.hdw.mx -m comment --comment "us-east-1.mediator.vmsproxy.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d cloud-test.hdw.mx -m comment --comment "cloud-test.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.relay.cloud.hdw.mx -m comment --comment "relay.relay.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d eu-west-3.mediator.cloud-test.hdw.mx -m comment --comment "eu-west-3.mediator.cloud-test.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d dev3.cloud.hdw.mx -m comment --comment "dev3.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.dev3.cloud.hdw.mx -m comment --comment "relay.dev3.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d qa.cloud.hdw.mx -m comment --comment "qa.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.qa.cloud.hdw.mx -m comment --comment "relay.qa.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-west-1.mediator.qa.cloud.hdw.mx -m comment --comment "us-west-1.mediator.qa.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d qa2.cloud.hdw.mx -m comment --comment "qa2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.qa2.cloud.hdw.mx -m comment --comment "relay.qa2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-west-1.mediator.qa2.cloud.hdw.mx -m comment --comment "us-west-1.mediator.qa2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d regress.cloud.hdw.mx -m comment --comment "regress.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.regress.cloud.hdw.mx -m comment --comment "relay.regress.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-east-1.mediator.regress.cloud.hdw.mx -m comment --comment "us-east-1.mediator.regress.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d alicloud.nxcloud.nx-demo.com -m comment --comment "alicloud.nxcloud.nx-demo.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.alicloud.nxcloud.nx-demo.com -m comment --comment "relay.alicloud.nxcloud.nx-demo.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d mediator.alicloud.nxcloud.nx-demo.com -m comment --comment "mediator.alicloud.nxcloud.nx-demo.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d stage2.cloud.hdw.mx -m comment --comment "stage2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d us-east-1.mediator.stage2.cloud.hdw.mx -m comment --comment "us-east-1.mediator.stage2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay.stage2.cloud.hdw.mx -m comment --comment "relay.stage2.cloud.hdw.mx"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d nxvms.com -m comment --comment "nxvms.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-ny2.vmsproxy.com -m comment --comment "relay-ny2.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d dp-ny-3.vmsproxy.com -m comment --comment "dp-ny-3.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d dp-ny-4.vmsproxy.com -m comment --comment "dp-ny-4.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d dp-ny-4.vmsproxy.com -m comment --comment "dp-ny-4.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-la.vmsproxy.com -m comment --comment "relay-la.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d dp-la-2.vmsproxy.com -m comment --comment "dp-la-2.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-chi.vmsproxy.com -m comment --comment "relay-chi.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-mia.vmsproxy.com -m comment --comment "relay-mia.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-dp-dal-1.vmsproxy.com -m comment --comment "relay-dp-dal-1.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-dp-ash-1.vmsproxy.com -m comment --comment "relay-dp-ash-1.vmsproxy.com"
-A OUTPUT -j ACCEPT -m owner --gid-owner ft -d relay-dp-sea-1.vmsproxy.com -m comment --comment "relay-dp-sea-1.vmsproxy.com"
-A OUTPUT -j REJECT --reject-with icmp-host-prohibited -m owner --gid-owner ft
COMMIT
